--- a/styles/site.css
+++ b/styles/site.css
@@ -1,10 +1,25 @@
+@font-face {
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: normal;
+  src: url(/fonts/Poppins/Poppins-Regular.ttf);
+ }
+
+ @font-face {
+  font-family: 'Poppins';
+  font-style: italic;
+  font-weight: normal;
+  src: url(/fonts/Poppins/Poppins-Italic.ttf);
+ }
+
 body, html {
   margin: 0;
 }
 
 body {
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  font-size: 18px;
+  font-family: 'Poppins', 'Sans Serif';
+  font-weight: normal;
+  font-size: 14px;
   background-color: #2c2f33;
   color: #aad1a5;
 }
@@ -56,6 +71,7 @@ a:hover {
 #menu h1 {
   display: inline-block;
   color: #eeb12d;
+  font-size: 1.5rem;
 }
 
 #menu h2 {
@@ -119,7 +135,6 @@ footer {
 
 footer p {
   font-size: 0.8rem;
-  font-style: italic;
   margin: 10px 0 0 0;
   padding: 0;
   text-align: center;
