--- a/styles/site.css
+++ b/styles/site.css
@@ -58,7 +58,7 @@ a:hover {
   color: #fff;
 }
 
-#menu {
+.side-bar {
   background-color: #2c2f33;;
   box-sizing: border-box;
   color: #999;
@@ -68,52 +68,52 @@ a:hover {
   padding: 20px;
 }
 
-#menu h1 {
+.side-bar h1 {
   display: inline-block;
   color: #eeb12d;
   font-size: 1.5rem;
 }
 
-#menu h2 {
+.side-bar h2 {
   font-size: 0.9rem;
   margin: 0 0 0 0;
   color: #ff7e67;
 }
 
-#menu .menu-toggle {
+.side-bar .menu-toggle {
   display: none;
   vertical-align: middle;
 }
 
-#menu .menu-toggle .desc {
+.side-bar .menu-toggle .desc {
   text-transform: uppercase;
   font-size: 0.9rem;
 }
 
-#menu .menu-toggle .indicator {
+.side-bar .menu-toggle .indicator {
   display: inline-block;
   transition: transform 0.2s;
 }
 
-#menu .header > * {
+.side-bar .header > * {
   vertical-align: middle;
 }
 
-#menu ul {
+.side-bar ul {
   list-style-type: none;
   padding: 0 0 0 15px;
   margin: 10px 0 0 0;
 }
 
-#menu ul li {
+.side-bar ul li {
   margin-bottom: 5px;
 }
 
-#menu ul li a.selected {
+.side-bar ul li a.selected {
   color: #fff;
 }
 
-#menu section {
+.side-bar section {
   margin-top: 20px;
 }
 
@@ -147,7 +147,7 @@ footer p {
     margin-bottom: 0;
   }
 
-  #menu {
+  .side-bar {
     height: 100%;
     left: 0px;
     overflow: hidden;
@@ -157,16 +157,16 @@ footer p {
     width: 100%;
   }
 
-  #menu.closed {
+  .side-bar.closed {
     height: 65px;
   }
 
-  #menu .menu-toggle {
+  .side-bar .menu-toggle {
     display: inline-block;
     margin-left: 10px;
   }
 
-  #menu .menu-toggle .indicator.closed {
+  .side-bar .menu-toggle .indicator.closed {
     transform-origin: center; 
     transform: rotate(180deg);
   }
