--- a/styles/site.css
+++ b/styles/site.css
@@ -7,9 +7,23 @@
 
  @font-face {
   font-family: 'Poppins';
+  font-style: normal;
+  font-weight: bold;
+  src: url(/fonts/Poppins/Poppins-Bold.ttf);
+ }
+
+ @font-face {
+  font-family: 'Poppins';
   font-style: italic;
   font-weight: normal;
   src: url(/fonts/Poppins/Poppins-Italic.ttf);
+ }
+
+ @font-face {
+  font-family: 'Poppins';
+  font-style: italic;
+  font-weight: bold;
+  src: url(/fonts/Poppins/Poppins-BoldItalic.ttf);
  }
 
 body, html {
@@ -24,14 +38,17 @@ body {
   color: #aad1a5;
 }
 
-.site-wrapper {
-  display: flex;
-  flex-direction: row;
+.site {
+  max-width: 1024px;
   margin-left: auto;
   margin-right: auto;
   margin-top: 50px;
   margin-bottom: 50px;
-  width: 1024px;
+}
+
+.site-wrapper {
+  display: flex;
+  flex-direction: row;
 }
 
 .site-wrapper main article {
@@ -44,7 +61,6 @@ body {
 
 h1 {
   margin: 0;
-  text-transform: uppercase;
   font-weight: normal;
   font-size: 1.5rem;
 }
@@ -80,19 +96,20 @@ a:hover {
   color: #ff7e67;
 }
 
-.side-bar .menu-toggle {
+.side-bar .toggle {
   display: none;
   vertical-align: middle;
 }
 
-.side-bar .menu-toggle .desc {
+.side-bar .toggle .desc {
   text-transform: uppercase;
   font-size: 0.9rem;
 }
 
-.side-bar .menu-toggle .indicator {
+.side-bar .toggle .indicator {
   display: inline-block;
   transition: transform 0.2s;
+  margin-left: 5px;
 }
 
 .side-bar .header > * {
@@ -118,13 +135,14 @@ a:hover {
 }
 
 main {
-  align-items: stretch;
   background-color: #373a3f;
   border-radius: 5px;
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
   flex-grow: 1;
+  /* See: https://stackoverflow.com/a/73337109 */
+  overflow: auto;
   padding: 20px;
 }
 
@@ -161,12 +179,12 @@ footer p {
     height: 65px;
   }
 
-  .side-bar .menu-toggle {
+  .side-bar .toggle {
     display: inline-block;
     margin-left: 10px;
   }
 
-  .side-bar .menu-toggle .indicator.closed {
+  .side-bar.closed .toggle .indicator {
     transform-origin: center; 
     transform: rotate(180deg);
   }
