--- a/styles/site.css
+++ b/styles/site.css
@@ -175,8 +175,12 @@ footer p {
     width: 100%;
   }
 
-  .side-bar.closed {
+  .side-bar {
     height: 65px;
+  }
+
+  .side-bar.open {
+    height: 100%;
   }
 
   .side-bar .toggle {
@@ -184,7 +188,7 @@ footer p {
     margin-left: 10px;
   }
 
-  .side-bar.closed .toggle .indicator {
+  .side-bar.open .toggle .indicator {
     transform-origin: center; 
     transform: rotate(180deg);
   }
