--- a/styles/site.css
+++ b/styles/site.css
@@ -2,28 +2,28 @@
   font-family: 'Poppins';
   font-style: normal;
   font-weight: normal;
-  src: url(/fonts/Poppins/Poppins-Regular.ttf);
+  src: url("../fonts/Poppins/Poppins-Regular.ttf");
  }
 
  @font-face {
   font-family: 'Poppins';
   font-style: normal;
   font-weight: bold;
-  src: url(/fonts/Poppins/Poppins-Bold.ttf);
+  src: url("../fonts/Poppins/Poppins-Bold.ttf");
  }
 
  @font-face {
   font-family: 'Poppins';
   font-style: italic;
   font-weight: normal;
-  src: url(/fonts/Poppins/Poppins-Italic.ttf);
+  src: url("../fonts/Poppins/Poppins-Italic.ttf");
  }
 
  @font-face {
   font-family: 'Poppins';
   font-style: italic;
   font-weight: bold;
-  src: url(/fonts/Poppins/Poppins-BoldItalic.ttf);
+  src: url("../fonts/Poppins/Poppins-BoldItalic.ttf");
  }
 
 body, html {
